# Audio-Simulation

./: .gitignore  BUILD_PROJECT.bat  CLEAN_MAKE_PROJECT .bat  CMakeLists.txt  MAKE_PROJECT.bat  README.md
src/: Application.cpp  Application.h  main.cpp
src/audio/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt
src/audio/sources/: CMakeLists.txt  MicrophoneSource.cpp  MicrophoneSource.h  WavFileSource.cpp  WavFileSource.h
src/physics/: CMakeLists.txt
src/visualization/: CMakeLists.txt  Spectrogram.cpp  Spectrogram.h  Waveform.cpp  Waveform.h
